testsuite/bsc.options/messages/Errors.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling Errors.bsv
code generation for sysErrors starts
Error: "Errors.bsv", line 13, column 16: (G0066)
  Instance `w' requires the following method to be always enabled, but the
  condition for executing the method is always False:
    _write
  This can be because the method is not used in any rules or because the
  condition of those uses can be shown to be False.
